--- a/dashboard.html
+++ b/dashboard.html
@@ -156,32 +156,42 @@
             // We intercept clicks to show Identity Modal first instead of direct action
             let pendingAction = null; // 'join', 'host', 'solo'
 
-            const showIdentityModal = (action) => {
+            // EXPOSE TO WINDOW for Module access
+            window.executeAction = (action) => {
+                if (action === 'join') {
+                    document.getElementById('join-section').classList.remove('hidden');
+                    document.getElementById('host-section').classList.add('hidden');
+                    document.getElementById('join-section').scrollIntoView({ behavior: 'smooth' });
+                } else if (action === 'host') {
+                    document.getElementById('host-section').classList.remove('hidden');
+                    document.getElementById('join-section').classList.add('hidden');
+                    document.getElementById('host-section').scrollIntoView({ behavior: 'smooth' });
+                } else if (action === 'solo') {
+                    // Logic handled in module, trigger button click as fallback or custom event?
+                    // Better: We'll export usage or handle in module.
+                    // Actually, Module can't easily see this without window.
+                    // Let's fire a click on the hidden button which the module is listening to
+                    document.getElementById('solo-btn').click();
+                }
+            };
+
+            // EXPOSE to window
+            window.showIdentityModal = (action) => {
                 pendingAction = action;
-                document.getElementById('identity-modal').style.display = 'flex'; // Override hidden class manually or toggle
+                document.getElementById('identity-modal').style.display = 'flex';
                 document.getElementById('identity-modal').classList.remove('hidden');
 
-                // Pre-fill if profile loaded
-                // (Handled in JS module below)
+                // Pre-fill logic is in module via data binding, or we can try to grab from DOM if rendered
+                const dispName = document.getElementById('display-name').textContent;
+                if (dispName && !dispName.includes("Loading") && !dispName.includes("Guest")) {
+                    document.getElementById('id-username').value = dispName;
+                }
             };
 
-            document.getElementById('join-card-trigger').onclick = () => {
-                // Determine if we need to ask for identity? 
-                // Request says "take college name ... in starting of every match"
-                showIdentityModal('join');
-            };
-
-            document.getElementById('host-card-trigger').onclick = () => {
-                showIdentityModal('host');
-            };
-
-            document.getElementById('solo-card-trigger').onclick = () => {
-                showIdentityModal('solo');
-            };
-
-            document.getElementById('quick-play-btn').onclick = () => {
-                showIdentityModal('solo');
-            };
+            document.getElementById('join-card-trigger').onclick = () => { showIdentityModal('join'); };
+            document.getElementById('host-card-trigger').onclick = () => { showIdentityModal('host'); };
+            document.getElementById('solo-card-trigger').onclick = () => { showIdentityModal('solo'); };
+            document.getElementById('quick-play-btn').onclick = () => { showIdentityModal('solo'); };
 
             // Close modal if needed? No, forced flow.
         </script>
@@ -200,6 +210,30 @@
         let currentUser = null;
         let userProfile = null;
         let profileUnsubscribe = null;
+
+        // INTERCEPT LOGIC: We overwrite the onclicks HERE because we have access to userProfile
+        function setupSmartClicks() {
+            const handleSmartClick = (action) => {
+                // If profile is fully complete (Name + College), skip modal
+                if (userProfile && userProfile.username && userProfile.college && !userProfile.username.includes("Guest")) {
+                    window.executeAction(action);
+                } else {
+                    // Show modal (using the global function defined above)
+                    // We need to trigger the global 'pendingAction' update. 
+                    // Let's reuse the element click simulation or just call the global logic if we can access 'showIdentityModal'.
+                    // Actually, simpler: The global onclick calls showIdentityModal.
+                    // We can just manually call it. But 'showIdentityModal' is not on window.
+
+                    // Hack/Fix: let's put showIdentityModal on window too.
+                    window.showIdentityModal(action);
+                }
+            };
+
+            document.getElementById('join-card-trigger').onclick = () => handleSmartClick('join');
+            document.getElementById('host-card-trigger').onclick = () => handleSmartClick('host');
+            document.getElementById('solo-card-trigger').onclick = () => handleSmartClick('solo');
+            document.getElementById('quick-play-btn').onclick = () => handleSmartClick('solo');
+        }
 
         onAuthStateChanged(auth, async (user) => {
             if (!user) {
@@ -228,6 +262,10 @@
                         document.getElementById('id-institution').value = userProfile.college || userProfile.school || ''; // college field stores institution
                         // Radio select
                         // Default to College if not set
+
+                        // Setup clicks now that we have profile
+                        setupSmartClicks();
+
                     } else {
                         // Create profile if missing
                         if (user.isAnonymous) {
@@ -316,7 +354,7 @@
                 document.getElementById('identity-modal').style.display = 'none';
 
                 // Proceed with Pending Action
-                executeAction(pendingAction);
+                window.executeAction(pendingAction);
 
             } catch (err) {
                 console.error(err);
